--- a/templates/food_log.html
+++ b/templates/food_log.html
@@ -2,7 +2,8 @@
 
 {% load static %}
 
-{% block title %}Food Tracker | Food Log{% endblock %}
+{% block title %}Kalória-Boom | 
+{% endblock %}
 
 {% block body %}
 <div class='py-4 mt-auto'>
