--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Food Tracker | Login{% endblock %}
+{% block title %}Kalória-Boom | Bejelentkezés{% endblock %}
 
 {% block body %}
 <div class='py-4 mt-auto'>
     <div class='container px-4'>
         <div class='d-flex justify-content-center'>
-            <h3>Login</h3>
+            <h3>Bejelentkezés</h3>
         </div>
 
         {% if message %}
@@ -24,28 +24,28 @@
                                 {% csrf_token %}
                                 <div class='form-group'>
                                     <label for='inputUsername' class='form-label mt-4'>
-                                        Username
+                                        Felhasználónév
                                     </label>
                                     <input type='text' name='username' class='form-control' id='inputUsername' placeholder='Enter username' autofocus>
                                 </div>
 
                                 <div class='form-group'>
                                     <label for='inputPassword1' class='form-label mt-4'>
-                                        Password
+                                        Jelszó
                                     </label>
                                     <input type='password' name='password' class='form-control' id='inputPassword1' placeholder='Enter password'>
                                 </div>
 
                                 <div class='form-group mt-4'>
                                     <button type='submit' class='btn btn-primary'>
-                                        Login
+                                        Bejelentkezés
                                     </button>
                                 </div>
                             </form>
 
                             <div class='mt-2'>
-                                Don't have an account? <a href="{% url 'register' %}" type='button' class='btn btn-link'>
-                                    Register here
+                                Nincs még felhasználói fiókja? <a href="{% url 'register' %}" type='button' class='btn btn-link'>
+                                    Regisztráljon itt!
                                 </a>
                             </div>
 
