--- a/templates/food.html
+++ b/templates/food.html
@@ -2,15 +2,15 @@
 
 {% load static %}
 
-{% block title %}Food Tracker | {{ food.food_name }}{% endblock %}
+{% block title %}Kalória-Boom | {{ food.food_name }}{% endblock %}
 
 {% block body %}
 <div class='py-4 mt-auto'>
     <div class='container-fluid px-4'>
-        <a href="{% url 'index' %}" class='btn btn-outline-primary my-3'>Go Back</a>
+        <a href="{% url 'index' %}" class='btn btn-outline-primary my-3'>Vissza</a>
 
         <h3>{{ food.food_name }}</h3>
-        <h5>Category: {{ food.category }}</h5>
+        <h5>Kategória: {{ food.category }}</h5>
 
         <div class='row justify-content-center'>
             <div class='col-6'>
@@ -31,7 +31,7 @@
                     <div class='card-header'>
                         <div class='d-flex w-100 justify-content-between'>
                             <h5 class='card-title mb-1'>
-                                Calories per {{ food.quantity|floatformat:0 }} grams:
+                                Kalória {{ food.quantity|floatformat:0 }} grammban:
                             </h5>
                             <p><strong>{{ food.calories }}</strong></p>
 
@@ -46,22 +46,22 @@
 
                         <div class='d-flex w-100 justify-content-between'>
                             <h5 class='card-title'>
-                                Macronutrients (g) per {{ food.quantity|floatformat:0 }} grams:
+                                Makrotápanyagok (g)  {{ food.quantity|floatformat:0 }} grammban:
                             </h5>
                         </div>
 
                         <div class='d-flex w-100 justify-content-between'>
-                            <p class='mb-1'>Fat:</p>
+                            <p class='mb-1'>Zsír:</p>
                             <p><strong>{{ food.fat }}</strong></p>
                         </div>
 
                         <div class='d-flex w-100 justify-content-between'>
-                            <p class='mb-1'>Carbs:</p>
+                            <p class='mb-1'>Szénhidrát:</p>
                             <p><strong>{{ food.carbohydrates }}</strong></p>
                         </div>
 
                         <div class='d-flex w-100 justify-content-between'>
-                            <p class='mb-1'>Protein:</p>
+                            <p class='mb-1'>Fehérje:</p>
                             <p><strong>{{ food.protein }}</strong></p>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
 
                 <div class='card bg-secondary mb-3'>
                     <div class='card-header'>
-                        <h4>Macronutrients breakdown</h4>
+                        <h4>A makrotápanyagok lebontása</h4>
                     </div>
                     <div class='card-body justify-content-center'>
                         <div class='chart-bar'>
