--- a/templates/weight_log_delete.html
+++ b/templates/weight_log_delete.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Food Tracker | Weight Log{% endblock %}
+{% block title %}Kalória-Boom | Testsúly napló{% endblock %}
 
 {% block body %}
 <div class='py-4 bg-light mt-auto'>
     <div class='container-fluid px-4'>
 
-        <h3>Weight Log</h3>
+        <h3>Testsúly napló</h3>
 
             <div class='row justify-content-center'>
                 <div class='col-xl-12'>
@@ -17,9 +17,9 @@
                                 <form method='POST'>
                                     {% csrf_token %}
 
-                                    Are you sure you want to delete this record?
+                                    Biztos abban, hogy törli a bejegyzést?
                                     <button type='submit' class='btn btn-primary'>
-                                        Delete
+                                        Törlöm
                                     </button>
 
                                 </form>
