--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 <div class='py-4 mt-auto'>
     <div class='container px-4'>
 
-        <h3>{{ title }}</h3>
+        {% comment %} <h3>{{ title }}</h3> {% endcomment %}
+        <h3>Étellista</h3>
 
         <div class='row justify-content-center'>
 
