--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -16,7 +16,7 @@
 
                             <div class='card bg-secondary mb-3'>
                                 <div class='card-header'>
-                                    <h4>Szia, <strong>{{ user.username }}</strong>!</h4>
+                                    <h4>Szia <strong>{{ user.username }}</strong>!</h4>
                                 </div>
                                 <div class='card-body'>
 
@@ -69,6 +69,7 @@
                                                             type='date'
                                                             name='date' 
                                                             id='date'
+                                                            required
                                                         >
                                                     </div>
                                                     <div class='col-5'>
@@ -82,8 +83,8 @@
                                                             id='weight'
                                                             placeholder='0.00' required name='weight' 
                                                             min='0' 
-                                                            value='0' 
-                                                            step='1' 
+                                                            value='-' 
+                                                            step='.1' 
                                                             title='Weight' 
                                                             pattern='^\d*(\.\d{0,2})?$'
                                                         >
