--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
-        <title>{% block title %}Food Tracker{% endblock %}</title>
+        <title>{% block title %}Kalória-Boom{% endblock %}</title>
         <link rel='icon' type='image/x-icon' href='{% static "images/favicon.ico" %}'>
         
         <!-- Icons -->
